--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.swal-confirm-btn,
+.swal-deny-btn {
+  @apply w-24 px-4 py-2 text-sm font-medium rounded-lg;
+}
+
 @layer base {
   html {
     font-family: "Poppins", sans-serif;
