--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,32 @@
     background-color: #fdfeff;
     overflow-x: hidden;
   }
+
+  .no-border-quill .ql-container {
+    max-height: 300px;
+    overflow-y: auto;
+    border: 2px solid #ccc;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    outline: none;
+  }
+
+  .no-border-quill .ql-toolbar {
+    font-family: "Poppins", sans-serif !important;
+    border: 2px solid #ccc;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    background: transparent;
+    padding: 0.5rem;
+  }
+
+  .no-border-quill .ql-editor {
+    font-family: "Poppins", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+    border: none !important;
+    outline: none;
+  }
 }
 
 @layer components {
